# BugBountyAgent

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/aegis-report/: SKILL.md
.claude/skills/aegis-scan/: SKILL.md
.claude/skills/aegis-tool-plan/: SKILL.md
configs/: example.yaml  local-lab.yaml
src/aegis_bounty/: __init__.py  __main__.py  authorization.py  chains.py  checks.py  cli.py  config.py  crawler.py  gap_analysis.py  http_client.py  llm.py  models.py  network.py  orchestrator.py  rate_limit.py  recon.py  reporting.py  scope.py  storage.py  tool_catalog.py  triage.py
tests/: conftest.py  test_chains.py  test_checks.py  test_cli.py  test_config.py  test_crawler.py  test_gap_analysis.py  test_http_client.py  test_llm.py  test_network.py  test_scope.py  test_storage_and_reporting.py  test_tool_catalog.py  test_triage.py
tests/fixtures/site/: app.js  details.html  index.html
