[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aegis-bounty-ai"
version = "0.1.0"
description = "Scope-locked, evidence-first web security assessment assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aegis contributors" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "openai>=1.68,<3",
  "pydantic>=2.10,<3",
  "PyYAML>=6.0,<7",
  "rich>=13.9,<15",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
aegis = "aegis_bounty.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_bounty"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["aegis_bounty"]
